<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Music</string>
    <string name="play_button_desc">Play Button</string>
    <string name="song_title_text">Play Your First Song</string>
    <string name="basket_image_desc">Basket Image</string>
    <string name="pause_play_button">Pause/Play Button</string>
    <string name="now_playing">Now Playing…\n %1$s</string>
    <string name="song_image_desc">Song Image</string>
    <string name="lyrics_button">LYRICS</string>
    <string name="settings_button">SETTINGS</string>
    <string name="songs_button">SONGS</string>
    <string name="lorem_ipsum">"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce fringilla elit sed mi aliquet hendrerit id id arcu. Suspendisse accumsan nulla vitae purus pulvinar maximus. In volutpat nisi sapien, fringilla fringilla est pharetra in. Nullam bibendum enim metus, nec posuere dolor ultricies et. Suspendisse sit amet tortor vitae elit varius viverra. Mauris lobortis quam quis ante tristique molestie. Nunc elementum at enim sed consectetur. Pellentesque pulvinar non enim id facilisis. Aliquam eleifend scelerisque sem, sit amet dignissim diam bibendum ac. Duis porttitor nibh ac tortor semper, rutrum pulvinar tellus faucibus. Donec orci nisl, hendrerit vel sapien vel, malesuada dapibus mauris. Maecenas velit ante, varius at malesuada a, euismod sit amet sapien. Suspendisse et eros metus. Morbi quis enim nulla. Quisque id nibh in tortor malesuada facilisis. Nullam mollis, augue nec lacinia dictum, turpis tellus vestibulum mi, et dapibus libero mauris et sapien. "</string>
    <string name="christmas_song1_lyrics">
        """
        [Verse]
        Rockin' around the Christmas tree
        At the Christmas party hop
        Mistletoe hung where you can see
        Every couple tries to stop
        Rockin' around the Christmas tree
        Let the Christmas spirit ring
        Later, we'll have some pumpkin pie
        And we'll do some caroling

        [Pre-Chorus]
        You will get a sentimental feeling
        When you hear
        Voices singing, "Let\'s be jolly
        Deck the halls with boughs of holly"

        [Chorus]
        Rockin\' around the Christmas tree
        Have a happy holiday
        Everyone's dancin\' merrily
        In the new old-fashioned way

        [Saxophone Solo]

        [Pre-Chorus]
        You will get a sentimental feeling
        When you hear
        Voices singing, "Let's be jolly
        Deck the halls with boughs of holly"
        See upcoming pop shows
        Get tickets for your favorite artists
        You might also like
        Last Christmas
        Wham!
        Jingle Bell Rock
        Bobby Helms
        All I Want for Christmas Is You
        Mariah Carey
        [Chorus]
        Rockin' around the Christmas tree
        Have a happy holiday
        Everyone's dancin' merrily
        In the new old-fashioned way
        """
    </string>
    <string name="christmas_song2_lyrics" tools:ignore="Typos">
        """
[Intro]
I don't want a lot for Christmas
There is just one thing I need
I don't care about the presents
Underneath the Christmas tree
I just want you for my own
More than you could ever know
Make my wish come true
All I want for Christmas is you, yeah

[Verse 1]
I don't want a lot for Christmas
There is just one thing I need (And I)
Don't care about the presents
Underneath the Christmas tree
I don't need to hang my stocking
There upon the fireplace (Ah)
Santa Claus won't make me happy
With a toy on Christmas Day

[Chorus]
I just want you for my own (Ooh)
More than you could ever know (Ooh)
Make my wish come true
All I want for Christmas is you
You, baby
See Mariah Carey Live
Get tickets as low as $44
You might also like
Last Christmas
Wham!
Silent Night
Christmas Songs
LET GO
Central Cee
[Verse 2]
Oh, I won't ask for much this Christmas
I won't even wish for snow (And I)
I'm just gonna keep on waiting
Underneath the mistletoe
I won't make a list and send it
To the North Pole for Saint Nick (Ah)
I won't even stay awake to
Hear those magic reindeer click

[Chorus]
'Cause I just want you here tonight (Ooh)
Holding on to me so tight (Ooh)
What more can I do?
Oh baby, all I want for Christmas is you
You, baby

[Bridge]
Oh, all the lights are shining
So brightly everywhere (So brightly, baby)
And the sound of children's
Laughter fills the air (Oh, oh yeah)
And everyone is singing (Oh yeah)
I hear those sleigh bells ringing (Oh)
Santa, won't you bring me the one I really need? (Yeah, oh, oh)
Won't you please bring my baby to me?
[Verse 3]
Oh, I don't want a lot for Christmas
This is all I'm asking for (Ah)
I just wanna see my baby
Standing right outside my door

[Chorus]
Oh, I just want you for my own (Ooh)
More than you could ever know (Ooh)
Make my wish come true
Oh baby, all I want for Christmas is you

[Outro]
You, baby
All I want for Christmas is you, baby (You)
All I want for Christmas is you, baby (Ah, oh, ah, oh)
All I want for Christmas is you, baby (You)
All I want for Christmas is you, baby (All I really want, baby, ooh)
All I want for Christmas is you, baby (All I want, all I really want is you)
        """
    </string>
</resources>