<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@android:color/background_dark"
    >

    <TextView
        android:id="@+id/song_title_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/song_title_text"
        android:textColor="@android:color/holo_blue_bright"
        android:textSize="32sp"
        android:layout_marginTop="30dp"
        android:textStyle="bold"
        android:textAlignment="center"
        />

    <ImageButton
        android:id="@+id/play_button"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_gravity="center"
        android:background="@android:color/transparent"
        android:contentDescription="@string/play_button_desc"
        android:scaleType="fitXY"
        android:src="@drawable/baseline_play_circle_filled_24"
        tools:visibility="invisible" />

    <ImageView
        android:id="@+id/music_box_image"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/archive"
        android:layout_gravity="bottom|start"
        android:layout_marginBottom="70dp"
        android:layout_marginStart="30dp"
        android:alpha="0"
        android:translationZ="1dp"
        android:contentDescription="@string/basket_image_desc"
        />

    <ImageView
        android:id="@+id/song_image"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:contentDescription="@string/song_image_desc"
        android:src="@drawable/music_24"
        android:scaleType="fitXY"
        android:background="@android:color/transparent"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp"
        android:visibility="gone"
        />

    <LinearLayout
        android:id="@+id/control_buttons_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:layout_gravity="center"
        android:visibility="invisible">
        <ImageButton
            android:id="@+id/prev_button"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/prev_24"
            android:contentDescription="@string/pause_play_button"
            android:background="@android:color/transparent"
            android:scaleType="fitXY"
            />
        <ImageButton
            android:id="@+id/play_pause_button"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/pause_24"
            android:contentDescription="@string/pause_play_button"
            android:background="@android:color/transparent"
            android:scaleType="fitXY"
            />
        <ImageButton
            android:id="@+id/next_button"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/next_24"
            android:contentDescription="@string/pause_play_button"
            android:background="@android:color/transparent"
            android:scaleType="fitXY"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center">

        <Button
            android:id="@+id/lyrics_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lyrics_button"
            android:textSize="20sp"
            style="@android:style/Widget.Material.Button.Borderless"
            app:backgroundTint="@color/green"
            android:background="@color/green"
            />
        <Button
            android:id="@+id/settings_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_button"
            android:textSize="20sp"
            android:layout_marginStart="10dp"
            style="@android:style/Widget.Material.Button.Borderless"
            app:backgroundTint="@color/green"
            android:background="@color/green"
            />
        <Button
            android:id="@+id/song_list_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/songs_button"
            android:textSize="20sp"
            android:layout_marginStart="10dp"
            style="@android:style/Widget.Material.Button.Borderless"
            app:backgroundTint="@color/green"
            android:background="@color/green"
            />

    </LinearLayout>



</FrameLayout>